# perf-bench

./: .gitignore  Cargo.toml  README.md  fnnaames.txt  profile.json  profile_2.json  profile_arkworks_test_whole.json  profile_circuit_setup.json  profile_later_2.json  profile_later_3.json
.cargo/: config.toml
perf-bench/: Cargo.toml  build.rs
perf-bench-common/: Cargo.toml
perf-bench-common/src/: lib.rs
perf-bench-ebpf/: Cargo.toml  build.rs
perf-bench-ebpf/src/: access.c  bindings.rs  main.rs  sched_process_exec.rs  sched_process_fork.rs
perf-bench/src/: cache.rs  gecko_profile.rs  lib.rs  main.rs  process.rs  profiler.rs  symbols.rs
perf-bench/src/gecko_profile/: markers.rs  mod.rs  profile.rs
perf-bench/src/symbolicate/: mod.rs  symbols.rs
