[workspace]
resolver = "2"
members = ["perf-bench", "perf-bench-common", "perf-bench-ebpf"]
default-members = ["perf-bench", "perf-bench-common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

addr2line = "0.24.2"
anyhow = { version = "1", default-features = false }
blazesym = "0.2.0-rc.3"
bytes = { version = "1.10.1" }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std", "derive"] }
dashmap = "6.1.0"
debugid = "0.8.0"
env_logger = { version = "0.11.5", default-features = false }
futures = { version = "0.3.31" }
itertools = { version = "0.14.0" }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
memmap2 = "0.9.5"
memoffset = "0.9.1"
object = "0.36.7"
proc-maps = "0.4.0"
procfs = "0.17"
rayon = "1.10.0"
rustc-demangle = "0.1.24"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0"
tokio = { version = "1.40.0", default-features = false }
uuid = "1.16.0"
which = { version = "6.0.0", default-features = false }

[profile.release.package.perf-bench-ebpf]
debug = 2
codegen-units = 1
