[package]
name = "perf-bench-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
perf-bench-common = { path = "../perf-bench-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
memoffset = { workspace = true }

[build-dependencies]
cc = "1.2.20"
bindgen = "0.71.1"
which = { workspace = true }
aya-tool = { git = "https://github.com/aya-rs/aya" }

[[bin]]
name = "perf-bench"
path = "src/main.rs"
